# tauri-plugin-serialport

./: Cargo.toml  build.rs  package.json
permissions/: available-ports.toml  cancel-read.toml  close-all.toml  default.toml  force-close.toml  write-binary.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: command.rs  lib.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
